--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello world</title>
+	<title>我的專輯</title>
 </head>
-<body>asdfghjk
-
+<body>
+<p>我是昕甯</p>
+<p>我在互動式網頁設計營做了這些作品!</p>
 </body>
 </html>
