--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
 <body>
 <p>我是昕甯</p>
 <p>我在互動式網頁設計營做了這些作品!</p>
+<br>
+<hr>
+<li><a href="bertha.html">1</a>
+<li><a href="canvas.html">2</a>
+<li><a href="canvasjs.html">3</a>
+<li><a href="dom.html">4</a>
+<li><a href="event.html">5</a>
+<li><a href="painter.html">6</a>
+
 </body>
 </html>
